samples/_failures_safe/1761479692_068699_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06592f10.c: In function ‘main’:
./samples/SAFE/__tmp_06592f10.c:130:5: error: expected ‘{’ at end of input
  130 |     enum
      |     ^~~~
./samples/SAFE/__tmp_06592f10.c:130:5: error: expected declaration or statement at end of input
